<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynaarm_single_example</name>
  <version>1.0.0</version>

  <description>Example launch files for a single dynaarm</description>

  <license>BSD 3-Clause</license>

  <author email="jpreisig@duatic.com">Jan Preisig</author>
  <author email="lnachtigall@duatic.com">Lennart Nachtigall</author>
  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>

  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rqt_controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <exec_depend>dynaarm_single_example_description</exec_depend>
  <exec_depend>dynaarm_driver</exec_depend>
  <exec_depend>dynaarm_single_example_moveit_config</exec_depend>
  <exec_depend>dynaarm_controllers</exec_depend>
  <exec_depend>dynaarm_extensions</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
